<resources>
    <string name="gogogo">走吧走吧</string>
    <string name="gobonus">快去领奖吧~</string>
    <string name="kilometer">公里</string>
    <string name="calorie">大卡</string>
    <string name="rank">排行榜</string>
    <string name="gap">距上一名还有666步</string>
    <string name="str_get_time">领取时间为：</string>
    <string name="str_giftlist">礼品单</string>
    <string name="str_week_giftlist">本周礼品单</string>
    <string name="str_gift_title">礼品详情</string>
    <string name="str_gift_rule">兑换规则</string>
    <string name="str_detail">商品详情</string>
    <string name="app_name">绿柠檬</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="umeng_share">Share</string>
    <string name="main_navigation_mall">健康商城</string>
    <string name="main_navigation_subscribe">体检预约</string>
    <string name="main_navigation_find">发现</string>
    <string name="main_navigation_my_health">我的健康</string>
    <string name="main_navigation_more">更多</string>
    <string name="my_health_me">我</string>
    <string name="my_health_report">体检报告</string>
    <string name="my_health_bill">身体小账本</string>
    <string name="my_health_last_test">最近一次体检报告</string>
    <string name="my_health_last_input">最近一次数据录入</string>
    <string name="titel_login">登录</string>
    <string name="titel_register">注册</string>
    <string name="str_confirm_register">确认注册</string>
    <string name="hint_username">手机号</string>
    <string name="hint_password">密码</string>
    <string name="hint_newpwd">输入新密码</string>
    <string name="hint_confirm_newpwd">确认新密码</string>
    <string name="hint_oldpwd">输入旧密码</string>
    <string name="titel_change_pwd">修改密码</string>
    <string name="hint_set_password">设置密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_verify_code">输入验证码</string>
    <string name="str_remember_pwd">记住密码</string>
    <string name="str_register">免费注册</string>
    <string name="str_find_pwd">找回密码</string>
    <string name="str_account">已有账号</string>
    <string name="str_agreed">我同意</string>
    <string name="str_agreement">《体检用户协议》</string>
    <string name="str_get_verify_code">获取验证码</string>
    <string name="str_get_verify_code_again">重新获取</string>
    <string name="err_msg_user_name">手机号不能为空</string>
    <string name="err_msg_user_name_exit">手机号已注册</string>
    <string name="err_msg_password"> 密码不能为空</string>
    <string name="err_msg_confirm_pwd">密码不一致</string>
    <string name="err_msg_newpassword">新密码不能为空</string>
    <string name="err_msg_oldpassword">旧密码不能为空</string>
    <string name="err_msg_confirmpwd">确认密码不能为空</string>
    <string name="err_confirm_password">确认密码和输入密码不一致</string>
    <string name="err_msg_verify_code">验证码不能为空</string>
    <string name="str_wait">请稍候 &#8230;</string>
    <string name="str_report_add">报告上传中</string>
    <string name="str_hot_menu">热销套餐</string>
    <string name="str_recomment_organization">推荐机构</string>
    <string name="str_market_price">市场价</string>
    <string name="str_family_price">家属价</string>
    <string name="str_plant_price">平台价</string>
    <string name="str_all">共</string>
    <string name="str_num">家体检机构提供服务</string>
    <string name="str_repay">柠檬返现</string>
    <string name="str_yuan">元</string>
    <string name="str_qi">起</string>
    <string name="str_menu">套餐</string>
    <string name="str_org">机构</string>
    <string name="hint_menu">请输入套餐名称</string>
    <string name="hint_org">请输入机构名称</string>
    <string name="str_org_brand">机构品牌</string>
    <string name="str_org_type">机构类型</string>
    <string name="str_rem">柠檬推荐</string>
    <string name="str_menu_type">套餐类型</string>
    <string name="str_menu_all">综合排序</string>
    <string name="str_order_price_down">价格从高到低</string>
    <string name="str_order_price_up">价格从低到高</string>
    <string name="str_order_num">销量排序</string>
    <string name="str_order_time">最新发布</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="str_search">搜索</string>
    <string name="hint_city">请输入城市名称</string>
    <string name="str_located_city">定位城市</string>
    <string name="str_hot_city">城市列表</string>
    <string name="str_org_type_pro">专业体检机构</string>
    <string name="str_org_type_pub">公立医院</string>
    <string name="str_org_type_re">疗养院</string>
    <string name="str_family">家属专区</string>
    <string name="str_plat">平台套餐</string>
    <string name="str_family_more">查看更多家属专区体检套餐</string>
    <string name="str_plat_more">查看更多平台体检套餐</string>
    <string name="str_menu_detail">套餐详情</string>
    <string name="str_menu_suit_people">适用人群</string>
    <string name="str_menu_suit_gender">适用性别</string>
    <string name="str_menu_content">套餐内容</string>
    <string name="str_menu_org">适用机构</string>
    <string name="str_menu_sold">已售</string>
    <string name="str_menu_jia">家</string>
    <string name="str_menu_custom">客户须知</string>
    <string name="str_menu_view">查看图文详情</string>
    <string name="str_add_cart">加入购物车</string>
    <string name="str_buy_now">立即购买</string>
    <string name="str_org_detail">机构详情</string>
    <string name="str_org_ahead">提前</string>
    <string name="str_org_tian">天预约</string>
    <string name="str_org_content">机构内容</string>
    <string name="str_org_view">点击查看详情</string>
    <string name="str_org_map">查看地图</string>
    <string name="str_org_menu">体检套餐</string>
    <string name="str_ge">个</string>
    <string name="str_org_time">机构工作时间</string>
    <string name="str_org_add">地址</string>
    <string name="str_org_time_reg">登记时间</string>
    <string name="str_more_org">查看更多适用机构</string>
    <string name="str_more_menu">查看更多体检套餐</string>
    <string name="str_org_brief">简介</string>
    <string name="str_cart">购物车</string>
    <string name="str_clear_now">立即结算</string>
    <string name="str_total">总计：</string>
    <string name="str_cart_zhong">种套餐</string>
    <string name="str_edit">编辑</string>
    <string name="str_finish">完成</string>
    <string name="str_money">¥</string>
    <string name="str_buy_num">购买数量</string>
    <string name="str_confirm">确认</string>
    <string name="str_order_id">订单号：</string>
    <string name="str_should_pay">应付金额：</string>
    <string name="str_go_pay">去付款</string>
    <string name="str_closing">结算</string>
    <string name="str_closing_ge">个套餐</string>
    <string name="str_summation">合计：</string>
    <string name="str_repayed">已返现</string>
    <string name="str_start_subscribe">开始预约</string>
    <string name="str_alert">提醒：请不要将预约卡号及密码提供给他人，谨防诈骗！</string>
    <string name="str_send">预约卡号及密码已发送至您的手机号，</string>
    <string name="str_check">请注意查收！</string>
    <string name="hint_card_num">请输入您的预约卡号</string>
    <string name="hint_card_pwd">请输入您的预约密码</string>
    <string name="str_sub_now">立即预约！</string>
    <string name="str_go_sub">去预约</string>
    <string name="str_no_login">亲，您还没有登录哦~</string>
    <string name="str_no_record">无记录</string>
    <string name="str_no_buy">亲，您还没有购买哦~</string>
    <string name="str_login_now">立即登录！</string>
    <string name="str_choice_now">立即去挑选！</string>
    <string name="str_subscribe">预约</string>
    <string name="str_step_one">完善预约信息</string>
    <string name="str_step_two">选择体检机构</string>
    <string name="str_step_three">确认您预约的套餐</string>
    <string name="str_step_four">选择体检时间</string>
    <string name="str_step_five">确认预约信息</string>
    <string name="str_one">01</string>
    <string name="str_two">02</string>
    <string name="str_three">03</string>
    <string name="str_four">04</string>
    <string name="str_five">05</string>
    <string name="str_tijian_person">体检人信息</string>
    <string name="str_contact_person">联系人信息</string>
    <string name="str_order_detail">订单详情</string>
    <string name="str_order_pay">付款</string>
    <string name="str_person">联系人</string>
    <string name="str_order_info">订单信息</string>
    <string name="str_my_menu">我的套餐</string>
    <string name="str_sub_record">预约记录</string>
    <string name="err_msg_card_num">预约号不能为空</string>
    <string name="err_msg_card_pwd">预约密码不能为空</string>
    <string name="str_tester_name">体检人</string>
    <string name="str_tester_gender">性别</string>
    <string name="str_tester_married">是否已婚</string>
    <string name="str_tester_id">身份证号</string>
    <string name="str_tester_mobile">手机号</string>
    <string name="str_contact">联系人</string>
    <string name="str_address">邮寄地址</string>
    <string name="str_zip_code">邮编</string>
    <string name="hint_real_name">真实姓名</string>
    <string name="hint_real_mobile">真实手机号码</string>
    <string name="hint_real_id">当天凭本人身份证验证身份</string>
    <string name="hint_real_add">请确保该地址能收到体检报告</string>
    <string name="hint_real_code">真实邮编</string>
    <string name="confirm_an_order">确认订单</string>
    <string name="ningmingbi_instroduction">柠檬币说明</string>
    <string name="immediate_exchange">立即兑换</string>
    <string name="market_price">市场价</string>
    <string name="to_get">去获得</string>
    <string name="generate_instruction">生成说明</string>
    <string name="product_instruction">消费说明</string>
    <string name="reset_instruction">清零说明</string>
    <string name="health_foundation">健康基金</string>
    <string name="mobile_num">手机号码</string>
    <string name="str_both">都可</string>
    <string name="str_female">女</string>
    <string name="str_male">男</string>
    <string name="str_married">已婚</string>
    <string name="str_not_married">未婚</string>
    <string name="str_sub_menu">预约套餐</string>
    <string name="str_tester_contact">体检人/联系人</string>
    <string name="str_sub_org_time">体检机构/预约时间</string>
    <string name="str_sub_org">体检机构</string>
    <string name="str_sub_time">预约时间</string>
    <string name="str_sub_report">上传体检报告</string>
    <string name="str_sub_done">预约完成</string>
    <string name="str_sub_full">已满</string>
    <string name="str_suit_time">适用时间</string>
    <string name="str_month">月</string>
    <string name="str_basic_data">基本生理数据</string>
    <string name="str_basic_age">年龄:</string>
    <string name="str_basic_gender">性别:</string>
    <string name="str_basic_height">身高</string>
    <string name="str_basic_weight">体重</string>
    <string name="str_basic_bmi">体重指标BMI</string>
    <string name="str_basic_sbp">收缩压</string>
    <string name="str_basic_dbp">舒张压</string>
    <string name="str_basic_rate">心率</string>
    <string name="str_unit">单位</string>
    <string name="hint_basic_age">请输入周岁年龄</string>
    <string name="hint_basic_real">请输入真实数据</string>
    <string name="hint_basic_bmi">自动计算</string>
    <string name="blood_routine_title">血常规/血生化</string>
    <string name="blood_routine_red_cell">红细胞</string>
    <string name="blood_routine_hemoglobin">血红蛋白</string>
    <string name="blood_routine_white_cell">白细胞</string>
    <string name="blood_routine_hint">请输入真实数据</string>
    <string name="other_title">其他</string>
    <string name="other_afp">甲胎蛋白</string>
    <string name="other_cea">癌胚抗原</string>
    <string name="other_igG">免疫球蛋白G</string>
    <string name="other_igA">免疫球蛋白A</string>
    <string name="other_igM">免疫球蛋白M</string>
    <string name="other_igD">免疫球蛋白D</string>
    <string name="other_igE">免疫球蛋白E</string>
    <string name="other_igT">免疫球蛋白T</string>
    <string name="other_rf">风湿免疫</string>
    <string name="str_negative">阴性</string>
    <string name="str_positive">阳性</string>
    <string name="tv_analysis_report_immunological_detection">免疫学检测</string>
    <string name="myred_get">获取的红包</string>
    <string name="myred_use">已使用红包</string>
    <string name="my_redpocket">我的红包</string>
</resources>