<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_background_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/org_background_grey"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/org_background_grey"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/dimen_border_size_xnormal"
            android:paddingTop="@dimen/dimen_border_size_xnormal"
            android:text="@string/confirm_an_order"
            android:textColor="@color/org_dark_gray"
            android:textSize="@dimen/dimen_font_size_xnormal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.65"
                android:text="@string/str_contact"
                android:textColor="@color/org_light_gray"
                android:textSize="14sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:background="@android:color/transparent"
                android:hint="@string/hint_real_name"
                android:textColorHint="@color/org_detail_grey"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/seperate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.65"
                android:text="@string/mobile_num"
                android:textColor="@color/org_light_gray"
                android:textSize="14sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:background="@android:color/transparent"
                android:hint="@string/hint_real_mobile"
                android:textColorHint="@color/org_detail_grey"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/seperate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.65"
                android:text="@string/str_address"
                android:textColor="@color/org_light_gray"
                android:textSize="14sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:background="@android:color/transparent"
                android:hint="@string/hint_real_add"
                android:textColorHint="@color/org_detail_grey"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/seperate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_font_size_xsmall"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.65"
                android:text="@string/str_zip_code"
                android:textColor="@color/org_light_gray"
                android:textSize="14sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:background="@android:color/transparent"
                android:hint="@string/hint_real_code"
                android:textColorHint="@color/org_detail_grey"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

  
    <RelativeLayout
        android:id="@+id/health_management_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/dimen_border_size_xnormal"
        android:paddingTop="@dimen/dimen_border_size_xnormal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/btn_immediate_exchange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/immediate_exchange"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_font_size_xnormal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="@dimen/dimen_font_size_normal"
        android:background="@color/org_background_grey"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/dimen_image_width_cart"
            android:layout_height="@dimen/dimen_image_height_cart"
            android:layout_marginBottom="@dimen/dimen_margintop_size"
            android:layout_marginLeft="@dimen/dimen_marginleft_size"
            android:layout_marginTop="@dimen/dimen_margintop_size"
            android:background="@drawable/background_my_bill" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_font_size_xsmall"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_margintop_size"
                android:text="智能血压计 自己在家都可测血压"
                android:textColor="@color/org_dark_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="免费"
                android:textColor="@color/org_orange"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_price"
                    android:textColor="@color/org_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_margin_size"
                    android:text="￥299"
                    android:textColor="@color/cart_grey"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>