<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/other_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/tv_other_title"
            style="@style/textview_subscribe"
            android:layout_gravity="center_vertical|left"
            android:paddingLeft="@dimen/dimen_border_size_normal"
            android:text="@string/other_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:paddingRight="@dimen/dimen_border_size_normal"
            android:src="@drawable/exhibition_arrow_big" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/other_tumor_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_border_size_normal"
            android:paddingRight="@dimen/dimen_border_size_normal" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textview_subscribe"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/other_afp" />

                <EditText
                    android:id="@+id/other_afp"
                    style="@style/edittext_health"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical|right"
                    android:hint="@string/blood_routine_hint" />
            </FrameLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/seperate" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textview_subscribe"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/other_cea" />

                <EditText
                    android:id="@+id/other_cea"
                    style="@style/edittext_health"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical|right"
                    android:hint="@string/blood_routine_hint" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>